Fix checkbox not wrapping content after it onto the next line.

--- a/sass/mainVerticalMenu.sass
+++ b/sass/mainVerticalMenu.sass
@@ -98,8 +98,8 @@ fieldset
 	button
 		margin-top: 1em
 
-input[type=checkbox]
-	$size: 2em
+[type=checkbox]
+	$size: 2.2em
 	width: $size
 	height: $size
 	margin: 0
